<resources>
    <string name="app_name">Android Desserts</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="floating_button_desc">floating button</string>

    <string name="donut_order_toast">You ordered a donut.</string>
    <string name="ice_cream_order_toast">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_toast">You ordered a FroYo.</string>
    <string name="order_info_text">Order Info</string>
    <string name="name_text">Name</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="address_text">Address</string>
    <string name="address_hint">Enter Your Address</string>
    <string name="phone_text">Phone</string>
    <string name="phone_number_hint">Enter Your Phone</string>
    <string name="note_text">Note:</string>
    <string name="note_hint">Enter Your Note</string>
    <string name="choose_delivery_text">Choose a delivery method:</string>
    <string name="standard_delivery_text">Standard delivery</string>
    <string name="fast_delivery_text">Fast delivery</string>
    <string name="pick_up_text">Pick up</string>
    <string name="standard_delivery_toast">Standard delivery</string>
    <string name="fast_delivery_toast">Fast delivery</string>
    <string name="pick_up_toast">Pick up</string>

    <string-array name="spinner_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_toast">You selected Order.</string>
    <string name="action_status_toast">You selected Status.</string>
    <string name="action_favorites_toast">You selected Favorites.</string>
    <string name="action_contact_toast">You selected Contact.</string>
    <string name="contact_item_text">Contact</string>
    <string name="orders_item_text">Orders</string>
    <string name="status_item_text">Status</string>
    <string name="favorites_item_text">Favorites</string>
</resources>